[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
katex = "0.4"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = {version="0.4", features=["serde"]}
lazy_static = "1.4.0"
itertools = "0.10.5"
slug = "0.1.4"