[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
katex = "0.4"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = {version="0.4", features=["serde"]}
lazy_static = "1.4.0"
itertools = "0.10.5"
slug = "0.1.4"
syntect = "5.0.0"
minify-html = "0.10.3"
css-minify = "0.3.1"
fs_extra = "1.2.0"
webp = "0.2.2"
image = "0.24.5"
imagesize = "0.10.1"
rayon = "1.6.1"
rss = {version="2.0.1", features=["atom"]}